--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-rnd": "^10.4.11",
+    "react-router-dom": "^6.28.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
